--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.24.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-query": "^3.33.7",
