--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^4.3.1",
     "react-query": "^3.33.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
