--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^4.3.1",
+    "react-lottie": "^1.2.3",
     "react-query": "^3.33.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
@@ -29,7 +30,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "CHOKIDAR_USEPOLLING=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
