--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: ./client
       dockerfile: Dockerfile
+    environment:
+      CHOKIDAR_USEPOLLING: "true"
     image: react
     ports:
       - "3000:3000"
@@ -16,6 +18,8 @@ services:
     build:
       context: ./server
       dockerfile: Dockerfile
+    environment:
+      CHOKIDAR_USEPOLLING: "true"
     ports:
       - "5000:5000"
     env_file:
