--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# Environment Variables
 .env
+
+# dependencies
 node_modules
