--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,1 +1,22 @@
-node_modules
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# Environment Variables
+.env
+
+
+.idea/
+.vscode/
+
+# dependencies
+node_modules/
+build
+.DS_Store
+*.tgz
+my-app*
+template/src/__tests__/__snapshots__/
+lerna-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/.changelog
+.npm/
