--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "jwt-decode": "^3.1.2",
+    "lottie-react": "^2.1.0",
+    "lottie-web": "^5.8.1",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
