--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
+    "cookie-parser": "^1.4.6",
     "faker": "^5.5.3",
     "js-yaml": "^4.1.0",
     "mongoose": "^6.0.13",
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.2.3",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/js-yaml": "^4.0.5",
