--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:server": "cd ./client && npm start",
-    "dev:client": "cd ./server && npm run start:dev",
+    "dev:client": "cd ./client && npm start",
+    "dev:server": "cd ./server && npm run start:dev",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\""
   },
   "repository": {
