--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "set NODE_ENV=dev && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -34,6 +34,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^10.0.0",
     "faker": "^5.5.3",
     "js-yaml": "^4.1.0",
     "mongoose": "^6.0.13",
