--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.12.0",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
+    "react-nice-avatar": "^1.2.4",
     "react-query": "^3.33.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
