:construction_worker: fix: secret variable name fix

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,6 +27,12 @@ jobs:
           context: .
           push: true
           tags: user/app:latest
+          secrets: |
+            "MONGO_ATLAS_USER=${{ secrets.MONGO_ATLAS_USER }}"
+            "MONGO_ATLAS_PASSWORD=${{ secrets.MONGO_ATLAS_PASSWORD }}"
+            "MONGO_ATLAS_DB_ADDRESS=${{ secrets.MONGO_ATLAS_DB_ADDRESS }}"
+            "MONGO_ATLAS_DB=${{ secrets.MONGO_ATLAS_DB }}"
+            "JWT_SECRET=${{ secrets.JWT_SECRET }}"
       - name: Update repo description
         uses: peter-evans/dockerhub-description@v2
         with:
