--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,6 +27,18 @@ jobs:
           context: .
           push: true
           tags: user/app:latest
+          env:
+            MONGO_ATLAS_USER: ${{ secrets.MONGO_ATLAS_USER }}
+            MONGO_ATLAS_PASSWORD: ${{ secrets.MONGO_ATLAS_PASSWORD }}
+            MONGO_ATLAS_DB_ADDRESS: ${{ secrets.MONGO_ATLAS_DB_ADDRESS }}
+            MONGO_ATLAS_DB: ${{ secrets.MONGO_ATLAS_DB }}
+            JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          with:
+            MONGO_ATLAS_USER: ${{ secrets.MONGO_ATLAS_USER }}
+            MONGO_ATLAS_PASSWORD: ${{ secrets.MONGO_ATLAS_PASSWORD }}
+            MONGO_ATLAS_DB_ADDRESS: ${{ secrets.MONGO_ATLAS_DB_ADDRESS }}
+            MONGO_ATLAS_DB: ${{ secrets.MONGO_ATLAS_DB }}
+            JWT_SECRET: ${{ secrets.JWT_SECRET }}
           secrets: |
             "MONGO_ATLAS_USER=${{ secrets.MONGO_ATLAS_USER }}"
             "MONGO_ATLAS_PASSWORD=${{ secrets.MONGO_ATLAS_PASSWORD }}"
