--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,12 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
       - name: Build and push
+        env:
+          MONGO_ATLAS_USER: ${{ secrets.MONGO_ATLAS_USER }}
+          MONGO_ATLAS_PASSWORD: ${{ secrets.MONGO_ATLAS_PASSWORD }}
+          MONGO_ATLAS_DB_ADDRESS: ${{ secrets.MONGO_ATLAS_DB_ADDRESS }}
+          MONGO_ATLAS_DB: ${{ secrets.MONGO_ATLAS_DB }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
         uses: docker/build-push-action@v2
         with:
           context: .
