:whale: fix: Testing secrets mount in dockerfile

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,11 +6,11 @@ COPY package.json .
 
 RUN npm install
 
-RUN --mount=type=secret,id=MONGO_ATLAS_USER \
-  --mount=type=secret,id=MONGO_ATLAS_PASSWORD \
-  --mount=type=secret,id=MONGO_ATLAS_DB_ADDRESS \
-  --mount=type=secret,id=MONGO_ATLAS_DB \
-  --mount=type=secret,id=JWT_SECRET \
+RUN --mount=type=secret,id=MONGO_ATLAS_USER,dst=/etc/secrets/.env \
+  --mount=type=secret,id=MONGO_ATLAS_PASSWORD,dst=/etc/secrets/.env \
+  --mount=type=secret,id=MONGO_ATLAS_DB_ADDRESS,dst=/etc/secrets/.env \
+  --mount=type=secret,id=MONGO_ATLAS_DB,dst=/etc/secrets/.env \
+  --mount=type=secret,id=JWT_SECRET,dst=/etc/secrets/.env \
    export MONGO_ATLAS_USER=$(cat /run/secrets/MONGO_ATLAS_USER) && \
    export MONGO_ATLAS_PASSWORD=$(cat /run/secrets/MONGO_ATLAS_PASSWORD) && \
    export MONGO_ATLAS_DB_ADDRESS=$(cat /run/secrets/MONGO_ATLAS_DB_ADDRESS) && \
