:whale: fix: Testing secrets mount in dockerfile

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,6 +9,12 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    env:
+      MONGO_ATLAS_USER: ${{ secrets.MONGO_ATLAS_USER }}
+      MONGO_ATLAS_PASSWORD: ${{ secrets.MONGO_ATLAS_PASSWORD }}
+      MONGO_ATLAS_DB_ADDRESS: ${{ secrets.MONGO_ATLAS_DB_ADDRESS }}
+      MONGO_ATLAS_DB: ${{ secrets.MONGO_ATLAS_DB }}
+      JWT_SECRET: ${{ secrets.JWT_SECRET }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
