:whale: fix: Testing secrets mount in dockerfile

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,8 +40,8 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: user/app:latest
           secrets: |
-            MONGO_ATLAS_USER=${{ secrets.MONGO_ATLAS_USER }}
-            MONGO_ATLAS_PASSWORD=${{ secrets.MONGO_ATLAS_PASSWORD }}
-            MONGO_ATLAS_DB_ADDRESS=${{ secrets.MONGO_ATLAS_DB_ADDRESS }}
-            MONGO_ATLAS_DB=${{ secrets.MONGO_ATLAS_DB }}
-            JWT_SECRET=${{ secrets.JWT_SECRET }}
+            "MONGO_ATLAS_USER=${{ secrets.MONGO_ATLAS_USER }}"
+            "MONGO_ATLAS_PASSWORD=${{ secrets.MONGO_ATLAS_PASSWORD }}"
+            "MONGO_ATLAS_DB_ADDRESS=${{ secrets.MONGO_ATLAS_DB_ADDRESS }}"
+            "MONGO_ATLAS_DB=${{ secrets.MONGO_ATLAS_DB }}"
+            "JWT_SECRET=${{ secrets.JWT_SECRET }}"
