--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,22 +1,25 @@
 FROM node:14
 
+RUN --mount=type=secret,id=MONGO_ATLAS_USER \
+  cat /run/secrets/MONGO_ATLAS_USER
+
+RUN --mount=type=secret,id=MONGO_ATLAS_PASSWORD \
+  cat /run/secrets/MONGO_ATLAS_PASSWORD
+
+RUN --mount=type=secret,id=MONGO_ATLAS_DB_ADDRESS \
+  cat /run/secrets/MONGO_ATLAS_DB_ADDRESS
+
+RUN --mount=type=secret,id=MONGO_ATLAS_DB \
+  cat /run/secrets/MONGO_ATLAS_DB
+
+RUN --mount=type=secret,id=JWT_SECRET \
+  cat /run/secrets/JWT_SECRET
+
 RUN npm i -g @nestjs/cli
 
 COPY package.json .
 
 RUN npm install
-
-RUN --mount=type=secret,id=MONGO_ATLAS_USER,dst=/etc/secrets/.env \
-  --mount=type=secret,id=MONGO_ATLAS_PASSWORD,dst=/etc/secrets/.env \
-  --mount=type=secret,id=MONGO_ATLAS_DB_ADDRESS,dst=/etc/secrets/.env \
-  --mount=type=secret,id=MONGO_ATLAS_DB,dst=/etc/secrets/.env \
-  --mount=type=secret,id=JWT_SECRET,dst=/etc/secrets/.env \
-   export MONGO_ATLAS_USER=$(cat /run/secrets/MONGO_ATLAS_USER) && \
-   export MONGO_ATLAS_PASSWORD=$(cat /run/secrets/MONGO_ATLAS_PASSWORD) && \
-   export MONGO_ATLAS_DB_ADDRESS=$(cat /run/secrets/MONGO_ATLAS_DB_ADDRESS) && \
-   export MONGO_ATLAS_DB=$(cat /run/secrets/MONGO_ATLAS_DB) && \
-   export JWT_SECRET=$(cat /run/secrets/JWT_SECRET) && \
-   npm gen
 
 COPY  . .
 
