--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -15,6 +15,14 @@ RUN --mount=type=secret,id=MONGO_ATLAS_DB \
 RUN --mount=type=secret,id=JWT_SECRET \
   cat /run/secrets/JWT_SECRET
 
+RUN echo ${JWT_SECRET}
+
+RUN echo {JWT_SECRET}
+
+RUN echo JWT_SECRET
+
+RUN echo ${/run/secrets/JWT_SECRET}
+
 RUN npm i -g @nestjs/cli
 
 COPY package.json .
