:whale: fix: Testing secrets mount in dockerfile

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,7 @@
+# Pull official base image
 FROM node:14
 
+# Mounting secrets as accessible variables from GITHUB SECRETS
 RUN --mount=type=secret,id=MONGO_ATLAS_USER \
   cat /run/secrets/MONGO_ATLAS_USER
 
@@ -15,14 +17,17 @@ RUN --mount=type=secret,id=MONGO_ATLAS_DB \
 RUN --mount=type=secret,id=JWT_SECRET \
   cat /run/secrets/JWT_SECRET
 
+# Install nestjs cli to run build
 RUN npm i -g @nestjs/cli
 
+# Install app dependencies
 COPY package.json .
-
 RUN npm install
 
+# Add app
 COPY  . .
 
+# Expose port
 EXPOSE 5000
 
 CMD ["nest", "start", "--watch"]
