--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,7 +37,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           tags: user/app:latest
           secrets: |
             "MONGO_ATLAS_USER=${{ secrets.MONGO_ATLAS_USER }}"
