--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,11 @@
 version: 2
 jobs:
   build:
+    working_directory: /Conduit
     docker:
       # using custom image, see .circleci/images/primary/Dockerfile
-      - image: circleci/cci-demo-docker-primary:0.0.2
-    working_directory: ../
+      - image: docker:17.05.0-ce-git
+    working_directory: 
 
     environment:
       TEST_RESULTS: /tmp/test-results
