--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-
+          version: 19.03.13
       # This should go into custom primary image, here's only for the sake of explanation
       - run:
           name: Install Docker client
