:construction_worker: CI: Created circle ci test file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,10 @@
 version: 2
+worflows:
+  build:
+    jobs:
+      - build:
+          context:
+            - development
 jobs:
   build:
     docker:
