--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ jobs:
       - restore_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
-          name: Install Dependencies
-          command: npm install
+          name: Install server Dependencies
+          command: cd server && npm install
       - save_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
