:construction_worker: CI: Adding test runner to CircleCI build pipeline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,11 @@ jobs:
           paths:
             - ./node_modules
       - run:
+          name: Install Jest-cli globally
+          command: npm install -g jest-cli
+      - run:
           name: Install JUnit coverage reporter
-          command: yarn add --dev jest-junit
+          command: npm add --dev jest-junit
       - run:
           name: Run tests with JUnit as reporter
           command: jest --ci --runInBand --reporters=default --reporters=jest-junit
