--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,11 +33,11 @@ jobs:
           name: Run tests with JUnit as reporter
           command: cd server && jest auth.controller --ci --runInBand --reporters=default --reporters=jest-junit  --testResultsProcessor="jest-junit"
           environment:
-            JEST_JUNIT_OUTPUT_DIR: /root/project/server
+            JEST_JUNIT_OUTPUT_DIR: /root/project/server/reports
       - store_test_results:
-          path: /root/project/server
+          path: /root/project/server/reports
       - store_artifacts:
-          path: /root/project/server/junit.xml
+          path: /root/project/server/reports/junit.xml
       - setup_remote_docker:
           version: 19.03.13
       # This should go into custom primary image, here's only for the sake of explanation
