--- a/server/package.json
+++ b/server/package.json
@@ -77,6 +77,7 @@
     "typescript": "^4.5.4"
   },
   "jest": {
+    "collectCoverage": true,
     "moduleFileExtensions": [
       "js",
       "json",
