--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "js-yaml": "^4.1.0",
     "mongoose": "^6.0.13",
     "nestjs-command": "^3.1.0",
+    "nyc": "^15.1.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
