--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,9 @@ orbs:
   codecov: codecov/codecov@1.0.2
 jobs:
   build:
+    branches:
+      only:
+        - main
     docker:
       - image: cimg/node:12.16
         user: root
