--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^16.12.0",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
