--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,13 @@
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-calendar": "^3.7.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^16.12.0",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-nice-avatar": "^1.2.4",
-    "react-query": "^3.33.7",
+    "react-query": "^3.34.16",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -34,6 +35,7 @@
     "redux-thunk": "^2.4.1",
     "storybook": "^6.4.18",
     "styled-components": "^5.3.3",
+    "swr": "^1.2.2",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.2",
     "webfontloader": "^1.6.28"
