--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@elastic/datemath": "^5.0.3",
     "@elastic/eui": "^41.2.0",
+    "@hookform/resolvers": "^2.8.8",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
@@ -20,6 +21,7 @@
     "react-calendar": "^3.7.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-nice-avatar": "^1.2.4",
@@ -38,7 +40,9 @@
     "swr": "^1.2.2",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.2",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "yup": "^0.5.0",
+    "zod": "^3.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
