--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "lodash": "^4.17.21",
     "lottie-react": "^2.1.0",
     "lottie-web": "^5.8.1",
-    "moment": "^2.29.1",
+    "moment": "2.29.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-calendar": "^3.7.0",
@@ -25,8 +25,8 @@
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-nice-avatar": "^1.2.4",
-    "react-query": "^3.34.16",
-    "react-redux": "^7.2.6",
+    "react-query": "3.34.19",
+    "react-redux": "7.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
@@ -94,7 +94,7 @@
     "@storybook/node-logger": "^6.4.18",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.4.18",
-    "eslint-config-airbnb": "^19.0.1",
+    "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
