--- a/server/package.json
+++ b/server/package.json
@@ -40,7 +40,7 @@
     "jest-junit": "^13.0.0",
     "js-yaml": "^4.1.0",
     "mongoose": "^6.0.13",
-    "nestjs-command": "^3.1.0",
+    "nestjs-command": "3.1.1",
     "nyc": "^15.1.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -60,7 +60,7 @@
     "@types/node": "16.11.26",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
-    "@types/supertest": "^2.0.11",
+    "@types/supertest": "2.0.12",
     "@types/yargs": "^17.0.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
