:arrow_up: deps: upgraded dependencies

--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,11 @@
     "@elastic/datemath": "^5.0.3",
     "@elastic/eui": "^41.2.0",
     "@hookform/resolvers": "^2.8.8",
-    "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^5.15.0",
+    "@reduxjs/toolkit": "1.8.1",
+    "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.24.0",
+    "axios": "0.26.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "lottie-react": "^2.1.0",
@@ -35,7 +35,7 @@
     "redux-persist": "^6.0.0",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.4.1",
-    "storybook": "6.4.20",
+    "storybook": "6.4.21",
     "styled-components": "^5.3.3",
     "swr": "^1.2.2",
     "universal-cookie": "^4.0.4",
@@ -88,20 +88,20 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "6.4.20",
-    "@storybook/addon-essentials": "6.4.20",
-    "@storybook/addon-links": "6.4.20",
-    "@storybook/node-logger": "6.4.20",
+    "@storybook/addon-actions": "6.4.21",
+    "@storybook/addon-essentials": "6.4.21",
+    "@storybook/addon-links": "6.4.21",
+    "@storybook/node-logger": "6.4.21",
     "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "6.4.20",
+    "@storybook/react": "6.4.21",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-hooks": "4.4.0",
     "prettier": "^2.5.0",
     "redux-devtools": "^3.7.0"
   }
