--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@nestjs/cli": "8.2.5",
     "@nestjs/common": "8.4.4",
-    "@nestjs/config": "^1.1.5",
+    "@nestjs/config": "1.2.1",
     "@nestjs/core": "8.4.4",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mongoose": "9.0.3",
@@ -32,7 +32,7 @@
     "@nestjs/swagger": "5.2.1",
     "@nestjsplus/cookies": "^1.1.1",
     "bcryptjs": "^2.4.3",
-    "class-transformer": "^0.4.0",
+    "class-transformer": "0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
@@ -64,7 +64,7 @@
     "@types/yargs": "^17.0.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
+    "eslint": "8.13.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "27.5.1",
