--- a/server/package.json
+++ b/server/package.json
@@ -39,7 +39,7 @@
     "faker": "^5.5.3",
     "jest-junit": "13.1.0",
     "js-yaml": "^4.1.0",
-    "mongoose": "6.2.11",
+    "mongoose": "6.3.0",
     "nestjs-command": "3.1.1",
     "nyc": "^15.1.0",
     "passport": "0.5.2",
@@ -48,7 +48,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "7.5.5",
     "swagger-ui-express": "^4.1.6",
-    "yargs": "^17.3.0"
+    "yargs": "17.4.1"
   },
   "devDependencies": {
     "@nestjs/schematics": "8.0.10",
@@ -61,9 +61,9 @@
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "2.0.12",
-    "@types/yargs": "^17.0.7",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@types/yargs": "17.0.10",
+    "@typescript-eslint/eslint-plugin": "5.19.0",
+    "@typescript-eslint/parser": "5.19.0",
     "eslint": "8.13.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -74,7 +74,7 @@
     "supertest": "6.2.2",
     "ts-jest": "^27.1.2",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "10.7.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "4.6.3"
   },
