--- a/.github/workflows/codesee-arch-diagram.yml
+++ b/.github/workflows/codesee-arch-diagram.yml
@@ -27,32 +27,32 @@ jobs:
         uses: Codesee-io/codesee-detect-languages-action@latest
 
       - name: Configure JDK 16
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         if: ${{ fromJSON(steps.detect-languages.outputs.languages).java }}
         with:
-          java-version: '16'
-          distribution: 'zulu'
+          java-version: "16"
+          distribution: "zulu"
 
       # CodeSee Maps Go support uses a static binary so there's no setup step required.
 
       - name: Configure Node.js 14
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         if: ${{ fromJSON(steps.detect-languages.outputs.languages).javascript }}
         with:
-          node-version: '14'
+          node-version: "14"
 
       - name: Configure Python 3.x
         uses: actions/setup-python@v2
         if: ${{ fromJSON(steps.detect-languages.outputs.languages).python }}
         with:
-          python-version: '3.10'
-          architecture: 'x64'
+          python-version: "3.10"
+          architecture: "x64"
 
       - name: Configure Ruby '3.x'
         uses: ruby/setup-ruby@v1
         if: ${{ fromJSON(steps.detect-languages.outputs.languages).ruby }}
         with:
-          ruby-version: '3.0'
+          ruby-version: "3.0"
 
       # CodeSee Maps Rust support uses a static binary so there's no setup step required.
 
@@ -71,7 +71,7 @@ jobs:
           step: mapUpload
           api_token: ${{ secrets.CODESEE_ARCH_DIAG_API_TOKEN }}
           github_ref: ${{ github.ref }}
-      
+
       - name: Insights
         id: insights
         uses: Codesee-io/codesee-map-action@latest
