--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "8.4.4",
     "@nestjs/swagger": "5.2.1",
     "@nestjsplus/cookies": "^1.1.1",
+    "alasql": "^1.7.3",
     "bcryptjs": "^2.4.3",
     "class-transformer": "0.5.1",
     "class-validator": "^0.13.2",
