--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@casl/ability": "^5.4.3",
     "@nestjs/cli": "8.2.5",
     "@nestjs/common": "8.4.4",
     "@nestjs/config": "1.2.1",
