--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "set NODE_ENV=dev && nest start --watch",
+    "gen-typings": "ts-node ./src/generate-typings.ts",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -22,23 +23,30 @@
   },
   "dependencies": {
     "@casl/ability": "^5.4.3",
+    "@nestjs/apollo": "^10.0.9",
     "@nestjs/cli": "8.2.5",
     "@nestjs/common": "8.4.4",
     "@nestjs/config": "1.2.1",
     "@nestjs/core": "8.4.4",
+    "@nestjs/graphql": "^10.0.10",
     "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "9.0.3",
     "@nestjs/passport": "8.2.1",
     "@nestjs/platform-express": "8.4.4",
     "@nestjs/swagger": "5.2.1",
+    "@nestjs/typeorm": "^8.0.3",
     "@nestjsplus/cookies": "^1.1.1",
+    "@prisma/client": "^3.13.0",
     "alasql": "^1.7.3",
+    "apollo-server-express": "^3.6.7",
     "bcryptjs": "^2.4.3",
     "class-transformer": "0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "faker": "^5.5.3",
+    "graphql": "^16.4.0",
     "jest-junit": "13.1.0",
     "js-yaml": "^4.1.0",
     "mongoose": "6.3.0",
@@ -50,6 +58,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "7.5.5",
     "swagger-ui-express": "^4.1.6",
+    "typeorm": "^0.2.45",
     "yargs": "17.4.1"
   },
   "devDependencies": {
@@ -71,6 +80,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "27.5.1",
     "prettier": "2.6.2",
+    "prisma-nestjs-graphql": "^15.2.2",
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.20",
     "supertest": "6.2.2",
