:hankey: API: Migrated the backend API to graphql and began writing front-end queries for base functions

--- a/server/package.json
+++ b/server/package.json
@@ -38,12 +38,14 @@
     "@nestjs/typeorm": "^8.0.3",
     "@nestjsplus/cookies": "^1.1.1",
     "@prisma/client": "^3.13.0",
+    "@types/bcrypt": "^5.0.0",
     "alasql": "^1.7.3",
     "apollo-server-express": "^3.6.7",
     "bcryptjs": "^2.4.3",
     "class-transformer": "0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "faker": "^5.5.3",
     "graphql": "^16.4.0",
