--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.6.1",
+    "@apollo/react-hooks": "^4.0.0",
     "@elastic/datemath": "^5.0.3",
     "@elastic/eui": "^41.2.0",
     "@growthbook/growthbook-react": "^0.8.1",
@@ -11,7 +13,10 @@
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apollo": "^2.33.10",
+    "apollo-boost": "^0.4.9",
     "axios": "0.26.1",
+    "graphql-tag": "^2.12.6",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "lottie-react": "2.2.1",
@@ -50,7 +55,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "gen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
     "extends": [
@@ -89,6 +95,11 @@
     ]
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/typescript": "2.4.8",
+    "@graphql-codegen/typescript-operations": "2.3.5",
+    "@graphql-codegen/typescript-react-apollo": "3.2.11",
     "@storybook/addon-actions": "6.4.21",
     "@storybook/addon-essentials": "6.4.21",
     "@storybook/addon-links": "6.4.21",
@@ -104,6 +115,7 @@
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "4.4.0",
     "prettier": "2.6.2",
-    "redux-devtools": "^3.7.0"
+    "redux-devtools": "^3.7.0",
+    "typescript": "^4.6.4"
   }
 }
