--- a/server/package.json
+++ b/server/package.json
@@ -51,6 +51,7 @@
     "graphql": "^16.4.0",
     "jest-junit": "13.1.0",
     "js-yaml": "^4.1.0",
+    "mongodb": "^4.5.0",
     "mongoose": "6.3.0",
     "nestjs-command": "3.1.1",
     "nyc": "^15.1.0",
