--- a/server/package.json
+++ b/server/package.json
@@ -65,6 +65,7 @@
   "devDependencies": {
     "@nestjs/schematics": "8.0.10",
     "@nestjs/testing": "8.4.4",
+    "@types/chance": "^1.1.3",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
@@ -76,10 +77,12 @@
     "@types/yargs": "17.0.10",
     "@typescript-eslint/eslint-plugin": "5.19.0",
     "@typescript-eslint/parser": "5.19.0",
+    "chance": "^1.1.8",
     "eslint": "8.13.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "27.5.1",
+    "mongodb-memory-server": "^8.5.2",
     "prettier": "2.6.2",
     "prisma-nestjs-graphql": "^15.2.2",
     "rimraf": "^3.0.2",
@@ -98,6 +101,9 @@
       "json",
       "ts"
     ],
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    },
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
